--- a/charts/oauth2-proxy-manifests/templates/deployment.yaml
+++ b/charts/oauth2-proxy-manifests/templates/deployment.yaml
@@ -68,9 +68,8 @@ spec:
         command: [ "/bin/sh", "-c", "source /etc/config/script/iat_to_clienid.sh && initialize" ]
         # command: [ "/bin/sh", "-c", "sleep 6400000" ]
 {{- if .Values.securityContext.enabled }}
-{{- $securityContext := unset .Values.securityContext "enabled" }}
         securityContext:
-          {{- toYaml $securityContext | nindent 10 }}
+          {{- toYaml .Values.securityContext | nindent 10 }}
 {{- end }}
         env:
           {{- with .Values.global.cp.proxy }}
@@ -348,9 +347,8 @@ spec:
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{- end }}
 {{- if .Values.securityContext.enabled }}
-{{- $securityContext := unset .Values.securityContext "enabled" }}
         securityContext:
-          {{- toYaml $securityContext | nindent 10 }}
+          {{- toYaml .Values.securityContext | nindent 10 }}
 {{- end }}
 {{- if .Values.extraContainers }}
   {{- toYaml .Values.extraContainers | nindent 6 }}
