--- a/charts/tibco-developer-hub/values.yaml
+++ b/charts/tibco-developer-hub/values.yaml
@@ -115,6 +115,9 @@ ingress:
 # @default -- See below
 backstage:
   image:
+    registry: ""
+
+    repository: ""
     # -- Backstage image name
     name: dx-tibco-hub
     # -- Backstage image tag (immutable tags are recommended)
