--- a/charts/tp-cp-tibcohub-recipes/Chart.yaml
+++ b/charts/tp-cp-tibcohub-recipes/Chart.yaml
@@ -7,8 +7,8 @@ name: tp-cp-tibcohub-recipes
 description: TIBCO Developer Hub Data Plane Recipes
 home: https://github.com/tibco/tp-dev-hub.git
 type: application
-version: 1.3.17
-appVersion: "1.3.0"
+version: 1.3.20
+appVersion: "1.3.0-HF1"
 keywords:
   - tibco-platform
   - control-plane
