Revert "Pushed 1.3.0-HF1 Tibco Hub related charts to public repo."
This reverts commit b5ea7c51d8a2541684a1e91542274cdf8a5d602e.

--- a/charts/tibco-developer-hub/templates/backstage-deployment.yaml
+++ b/charts/tibco-developer-hub/templates/backstage-deployment.yaml
@@ -97,7 +97,7 @@ spec:
       {{- end }}
       containers:
         - name: backstage-backend
-          image: {{ include "backstage.image.backend-registry" .}}{{"/"}}{{ include "backstage.image.backend-repository" .}}:{{ .Values.backstage.image.tag }}
+          image: {{ include "backstage.image.registry" .}}{{"/"}}{{ include "backstage.image.repository" .}}{{"/"}}{{ .Values.backstage.image.name }}:{{ .Values.backstage.image.tag }}
           imagePullPolicy: {{ .Values.backstage.image.pullPolicy | quote -}}
           {{- if .Values.backstage.containerSecurityContext }}
           securityContext:
