--- a/charts/tp-cp-recipes/Chart.yaml
+++ b/charts/tp-cp-recipes/Chart.yaml
@@ -9,8 +9,8 @@ name: tp-cp-recipes
 description: TIBCO Platform recipe chart
 
 type: application
-version: 1.3.165
-appVersion: "1.3.0"
+version: 1.3.171
+appVersion: "1.3.0-HF1"
 keywords:
   - tibco-platform
   - platform
@@ -26,10 +26,10 @@ dependencies:
     version: "1.3.35"
     repository: alias:tibco-platform
   - name: tp-cp-flogo-recipes
-    version: "1.3.26"
+    version: "1.3.30"
     repository: alias:tibco-platform
   - name: tp-cp-tibcohub-recipes
-    version: "1.3.17"
+    version: "1.3.20"
     repository: alias:tibco-platform
   - name: dp-oauth2proxy-recipes
     version: "1.3.19"
