--- a/charts/platform-base/Chart.yaml
+++ b/charts/platform-base/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-base
 description: TIBCO Platform base chart
 type: application
-version: 1.3.338
-appVersion: "1.3.0"
+version: 1.3.344
+appVersion: "1.3.0-HF1"
 keywords:
   - tibco-platform
   - platform
@@ -22,7 +22,7 @@ dependencies:
     version: "1.3.18"
     repository: alias:tibco-platform
   - name: tp-cp-recipes
-    version: "1.3.165"
+    version: "1.3.171"
     repository: alias:tibco-platform
   - name: tp-cp-o11y
     version: "1.3.19"
