--- a/charts/dp-core-infrastructure/values.yaml
+++ b/charts/dp-core-infrastructure/values.yaml
@@ -10,6 +10,8 @@
 # Declare variables to be passed into your templates.
 
 global:
+  ingressNoHost:
+    enabled: false
   tibco:
     dataPlaneId: "abcd"
     subscriptionId: "sub1"
