--- a/charts/o11y-service/templates/ingress.yaml
+++ b/charts/o11y-service/templates/ingress.yaml
@@ -45,7 +45,33 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-  - host: "*.prod-tibco-sub-{{ .Values.global.cp.subscriptionId}}.svc.cluster.local"
+ {{- if .Values.global.ingressNoHost.enabled }}    
+    - http:
+      {{- if $.Values.ingress.hostsOverride -}}
+      paths:
+        {{- range .paths }}
+        - path: {{ .path }}
+          {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+          pathType: {{ .pathType }}
+          {{- end }}
+          backend:
+            service:
+              name: {{ $fullName }}
+              port:
+                number: {{ $.Values.service.port }}
+          {{- end }}
+      {{- else}}
+      paths:
+        - path: /tibco/agent/o11y/{{ $.Values.global.cp.instanceId }}/o11y-service/
+          pathType: Prefix
+          backend:
+            service:
+              name: {{ $fullName }}
+              port:
+                number: {{ $.Values.service.port }}
+      {{- end }}  
+  {{- else }}
+    - host: "*.prod-tibco-sub-{{ .Values.global.cp.subscriptionId}}.svc.cluster.local"
     http:
       {{- if $.Values.ingress.hostsOverride -}}
       paths:
@@ -94,5 +120,6 @@ spec:
               name: {{ $fullName }}
               port:
                 number: {{ $.Values.service.port }}
-      {{- end }}
+      {{- end }}          
+  {{- end }}      
 {{- end -}}
