--- a/charts/tp-dp-monitor-agent/templates/ingress.yaml
+++ b/charts/tp-dp-monitor-agent/templates/ingress.yaml
@@ -18,6 +18,17 @@ metadata:
 spec:
   ingressClassName: {{ tpl .Values.ingress.className . }}
   rules:
+{{- if .Values.global.ingressNoHost.enabled }}
+  - http:
+    paths:
+    - pathType: Prefix
+      path: {{ .Values.ingress.pathPrefix }}
+      backend:
+        service:
+          name: {{ include "tp-dp-monitor-agent.consts.appName" . }}
+          port:
+            number: 7831
+{{- else }}              
   - host: "*.prod-tibco-sub-{{ .Values.global.cp.subscriptionId}}.svc.cluster.local"
     http:
       paths:
@@ -28,4 +39,5 @@ spec:
             name: {{ include "tp-dp-monitor-agent.consts.appName" . }}
             port:
               number: 7831
+{{- end }}
 {{- end }}
