Picking up the TPCore build 1.3.8330

--- a/charts/tp-cp-core/charts/web-server/Chart.yaml
+++ b/charts/tp-cp-core/charts/web-server/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 description: A Helm chart for -- WebServer
 name: web-server
-version: 1.3.3946
+version: 1.3.4142
