--- a/charts/tp-cp-core/Chart.yaml
+++ b/charts/tp-cp-core/Chart.yaml
@@ -1,33 +1,33 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 dependencies:
 - condition: admin-webserver.enabled
   name: admin-webserver
-  version: 1.3.*
+  version: 1.3.1182
 - condition: web-server.enabled
   name: web-server
-  version: 1.3.*
+  version: 1.3.4142
 - condition: orchestrator.enabled
   name: orchestrator
-  version: 1.3.*
+  version: 1.3.2914
 - condition: user-subscriptions.enabled
   name: user-subscriptions
-  version: 1.3.*
+  version: 1.3.1598
 - condition: email-service.enabled
   name: email-service
-  version: 1.3.*
+  version: 1.3.320
 - condition: cronjobs.enabled
   name: cronjobs
-  version: 1.3.*
+  version: 1.3.411
 - condition: identity-management.enabled
   name: identity-management
-  version: 1.3.*
+  version: 1.3.1659
 - condition: identity-provider.enabled
   name: identity-provider
-  version: 1.3.*
+  version: 1.3.580
 - condition: pengine.enabled
   name: pengine
-  version: 1.3.*
+  version: 1.3.782
 description: A Helm chart for -- tp-cp-core
 name: tp-cp-core
-version: 1.3.8266
+version: 1.3.8330
