--- a/charts/tp-cp-core/charts/cronjobs/Chart.yaml
+++ b/charts/tp-cp-core/charts/cronjobs/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 description: A Helm chart for -- Cron Jobs
 name: cronjobs
-version: 1.3.405
+version: 1.3.411
