--- a/charts/tp-cp-core/charts/identity-management/Chart.yaml
+++ b/charts/tp-cp-core/charts/identity-management/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 description: A Helm Chart for TIBCO Platform Control Plane -- Identity Management
 name: identity-management
-version: 1.3.1536
+version: 1.3.1659
