tp-cp-bootstrap: 1.3.39    appVersion: "1.3.0-HF2" tp-cp-infra-recipes: 1.3.62    appVersion: "1.3.0-HF2" tp-provisioner-agent: 1.3.3    appVersion: "1.3.0-HF2" dp-core-infrastructure: 1.3.16    appVersion: "1.3.0-HF2"

--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/deployment.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/deployment.yaml
@@ -46,6 +46,8 @@ spec:
             value: {{ .Release.Name }}
           - name: DATAPLANE_ID
             value: {{ .Values.global.tibco.dataPlaneId }}
+          - name: LOG_LEVEL
+            value: {{ .Values.logLevel }}
           # Note: The Helm cache directory is configured as /tmp/.cache/helm to circumvent potential file permission issues due to security context.
           - name: HELM_CACHE_HOME
             value: /tmp/.cache/helm
