--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/values.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/values.yaml
@@ -18,9 +18,12 @@ resources:
 # no of replicas
 replicaCount: "1"
 
+# log level for the provisioner agent
+logLevel: "info"
+
 image:
   name: infra-provisioner-agent
-  tag: 356
+  tag: 379
   pullPolicy: Always
 
 nodeSelector:
