--- a/charts/dp-core-infrastructure/Chart.yaml
+++ b/charts/dp-core-infrastructure/Chart.yaml
@@ -6,7 +6,7 @@
 
 
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: "1.3.0-HF2"
 dependencies:
 - condition: tibtunnel.enabled
   name: tp-tibtunnel
@@ -27,4 +27,4 @@ dependencies:
 description: A Helm chart for Data Plane Infrastructure
 name: dp-core-infrastructure
 type: application
-version: 1.3.13
+version: 1.3.16
