--- a/charts/tp-cp-bootstrap/Chart.yaml
+++ b/charts/tp-cp-bootstrap/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: tp-cp-bootstrap
 description: TIBCO Platform Control Plane bootstrap chart
 type: application
-version: 1.3.36
-appVersion: "1.3.0"
+version: 1.3.39
+appVersion: "1.3.0-HF2"
 keywords:
   - tibco-platform
   - control-plane
