--- a/charts/tp-cp-infra-recipes/Chart.yaml
+++ b/charts/tp-cp-infra-recipes/Chart.yaml
@@ -9,8 +9,8 @@ apiVersion: v2
 name: tp-cp-infra-recipes
 description: TIBCO Platform Infrastructure Data Plane recipes
 type: application
-version: 1.3.59
-appVersion: "1.3.0"
+version: 1.3.62
+appVersion: "1.3.0-HF2"
 keywords:
   - tibco-platform
   - control-plane
