--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-bootstrap
 description: TIBCO Platform bootstrap chart
 type: application
-version: 1.3.36
-appVersion: "1.3.0"
+version: 1.3.39
+appVersion: "1.3.0-HF2"
 keywords:
   - tibco-platform
   - platform
@@ -19,5 +19,5 @@ annotations:
   app.helm.sh/name: platform-bootstrap
 dependencies:
   - name: tp-cp-bootstrap
-    version: "1.3.36"
+    version: "1.3.39"
     repository: alias:tibco-platform
