Picked up 1.3.463 build for tp-cp-core-finops

--- a/charts/tp-cp-core-finops/Chart.yaml
+++ b/charts/tp-cp-core-finops/Chart.yaml
@@ -1,16 +1,16 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 dependencies:
 - name: monitoring-service
-  version: 1.3.*
+  version: 1.3.267
 - name: finops-service
-  version: 1.3.*
+  version: 1.3.72
 - name: finops-prometheus
-  version: 1.3.*
+  version: 1.3.58
 - name: finops-web-server
-  version: 1.3.*
+  version: 1.3.195
 - name: finops-otel-collector
-  version: 1.3.*
+  version: 1.3.3
 description: A Helm chart for -- tp-cp-core-finops
 name: tp-cp-core-finops
-version: 1.3.442
+version: 1.3.463
