--- a/charts/tp-cp-core-finops/charts/finops-web-server/Chart.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-web-server/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 description: A Helm chart for -- Finops WebServer
 name: finops-web-server
-version: 1.3.172
+version: 1.3.195
