--- a/.github/linters/ct.yaml
+++ b/.github/linters/ct.yaml
@@ -7,7 +7,7 @@ chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
   - grafana=https://grafana.github.io/helm-charts
   - prometheus-community=https://prometheus-community.github.io/helm-charts
-  - tibco-platform=https://tibcosoftware.github.io/tp-helm-charts/
+  - tibco-platform=https://mpandav.github.io/tp-helm-charts/
 helm-extra-args: --timeout 600s
 validate-maintainers: false
 excluded-charts:
