--- a/charts/platform-base/Chart.yaml
+++ b/charts/platform-base/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: platform-base
 description: TIBCO Platform base chart
 type: application
-version: 1.3.338
+version: 1.3.339
 appVersion: "1.3.0"
 keywords:
   - tibco-platform
@@ -19,38 +19,38 @@ annotations:
   app.helm.sh/name: platform-base
 dependencies:
   - name: tp-cp-configuration
-    version: "1.3.18"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-recipes
-    version: "1.3.165"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-o11y
-    version: "1.3.19"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-core
-    version: "1.3.8266"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-core-ops
-    version: "1.3.8266"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-core-finops
-    version: "1.3.442"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-integration
-    version: "1.3.80"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-integration.enabled
     tags:
       - integration
   - name: tp-cp-tibcohub-contrib
-    version: "1.3.5"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-tibcohub-contrib.enabled
   - name: tp-cp-msg-contrib
-    version: "1.3.14"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-msg-contrib.enabled
   - name: tp-cp-hawk
-    version: "1.3.18"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-hawk.enabled
