--- a/charts/tp-cp-core/templates/jobs.yaml
+++ b/charts/tp-cp-core/templates/jobs.yaml
@@ -477,7 +477,7 @@ spec:
           mountPath: /private/tsc
           subPath: tsc
         - name: tmp
-          emptyDir: {}
+          mountPath: /tmp
       volumes:
         - name: tmp
           emptyDir: {}
