--- a/charts/tp-cp-core-finops/templates/jobs.yaml
+++ b/charts/tp-cp-core-finops/templates/jobs.yaml
@@ -316,7 +316,11 @@ spec:
           subPath: finops
         - name: secret-volume
           mountPath: /private/finops/secret-volume
+        - name: tmp
+          mountPath: /tmp
       volumes:
+        - name: tmp
+          emptyDir: {}
         - name: store-vol
           persistentVolumeClaim:
             claimName: {{ include "cp-core-configuration.pvc-name" . }}
