--- a/charts/tp-cp-recipes/Chart.yaml
+++ b/charts/tp-cp-recipes/Chart.yaml
@@ -9,7 +9,7 @@ name: tp-cp-recipes
 description: TIBCO Platform recipe chart
 
 type: application
-version: 1.3.165
+version: 1.3.166
 appVersion: "1.3.0"
 keywords:
   - tibco-platform
@@ -20,23 +20,23 @@ annotations:
   app.helm.sh/name: tp-cp-recipes
 dependencies:
   - name: tp-cp-infra-recipes
-    version: "1.3.59"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-bwce-recipes
-    version: "1.3.35"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-flogo-recipes
-    version: "1.3.26"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-tibcohub-recipes
-    version: "1.3.17"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: dp-oauth2proxy-recipes
-    version: "1.3.19"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-servicemesh-recipes
-    version: "1.3.5"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-hawk-console-recipes
-    version: "1.3.26"
+    version: "1.3.*"
     repository: alias:tibco-platform
