--- a/charts/tp-cp-integration/Chart.yaml
+++ b/charts/tp-cp-integration/Chart.yaml
@@ -7,7 +7,7 @@ name: tp-cp-integration
 description: TIBCO Platform Integration chart
 
 type: application
-version: 1.3.80
+version: 1.3.81
 appVersion: "1.3.0"
 keywords:
   - tibco-platform
@@ -18,29 +18,29 @@ annotations:
   app.helm.sh/name: tp-cp-integration
 dependencies:
   - name: tp-cp-integration-common
-    version: "1.3.5"
+    version: "1.3.*"
     repository: alias:tibco-platform
   - name: tp-cp-integration-bwce
-    version: "1.3.19"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-integration-bwce.enabled
   - name: tp-cp-integration-flogo
-    version: "1.3.12"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-integration-flogo.enabled
   - name: tp-cp-integration-bw5
-    version: "1.3.22"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-integration-bw5.enabled
   - name: tp-cp-integration-bw6
-    version: "1.3.32"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-integration-bw6.enabled
   - name: tp-cp-bwce-utilities
-    version: "1.3.13"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-bwce-utilities.enabled
   - name: tp-cp-flogo-utilities
-    version: "1.3.20"
+    version: "1.3.*"
     repository: alias:tibco-platform
     condition: tp-cp-flogo-utilities.enabled
