--- a/charts/tp-cp-integration-common/charts/fileserver/templates/deployment.yaml
+++ b/charts/tp-cp-integration-common/charts/fileserver/templates/deployment.yaml
@@ -51,6 +51,8 @@ spec:
             - name: nginx-config
               mountPath: /etc/nginx/nginx.conf
               subPath: nginx.conf
+            - name: tmp
+              mountPath: /tmp
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
@@ -66,6 +68,8 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
+        - name: tmp
+          emptyDir: {}
         - name: shared-volume
           persistentVolumeClaim:
             claimName: {{ include "fileserver.pvc-name" . }}
