--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bw-studio.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bw-studio.yaml
@@ -64,6 +64,8 @@ spec:
         volumeMounts:
         - name: tmp
           mountPath: /tmp
+        - name: kaniko
+          mountPath: /kaniko
         - mountPath: {{ $.Values.toolsMountPath }}
           name: store-vol
           subPath: {{ $.Values.toolsSubPath }}
@@ -75,6 +77,8 @@ spec:
       volumes:
       - name: tmp
         emptyDir: {}  
+      - name: kaniko
+        emptyDir: {}
       - name: store-vol
         persistentVolumeClaim:
           claimName: {{ include "bwce-utilities.pvc-name" $dot }}
