--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/post-extraction-job-bw-studio.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/post-extraction-job-bw-studio.yaml
@@ -99,11 +99,15 @@ spec:
           volumeMounts:
             - name: tmp
               mountPath: /tmp
+            - name: kaniko
+              mountPath: /kaniko
             - name: shared-vol
               mountPath: {{ $.Values.toolsMountPath }}
               subPath: {{ $.Values.toolsSubPath }}
       volumes:
         - name: tmp
+          emptyDir: {}
+        - name: kaniko
           emptyDir: {}
         - name: shared-vol
           persistentVolumeClaim:
