--- a/charts/tp-cp-tibcohub-contrib/templates/job.yaml
+++ b/charts/tp-cp-tibcohub-contrib/templates/job.yaml
@@ -52,7 +52,7 @@ spec:
         - mountPath: /efs
           name: store-vol
           subPath: tsc/contributors
-        - mountPath: /kaniko
+        - mountPath: /kaniko/.docker/
           name: kaniko
 # mount this secret only if private container registry is configured for CP.
 {{- if (include "tp-cp-tibcohub-contrib.container-registry.secret" .) }}
