--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bt.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bt.yaml
@@ -90,7 +90,7 @@ spec:
         - name: tmp
           mountPath: /tmp
         - name: kaniko
-          mountPath: /kaniko
+          mountPath: /kaniko/.docker/
 # mount this secret only if private container registry is configured for CP.
 {{- if (include "bwce-utilities.container-registry.secret" $dot) }}
         - mountPath: /tibco/containerregistry
