--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/post-extraction-job-bw-studio.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/post-extraction-job-bw-studio.yaml
@@ -100,7 +100,7 @@ spec:
             - name: tmp
               mountPath: /tmp
             - name: kaniko
-              mountPath: /kaniko
+              mountPath: /kaniko/.docker/
             - name: shared-vol
               mountPath: {{ $.Values.toolsMountPath }}
               subPath: {{ $.Values.toolsSubPath }}
