--- a/charts/tp-cp-msg-contrib/values.yaml
+++ b/charts/tp-cp-msg-contrib/values.yaml
@@ -32,6 +32,9 @@ cp:
   imageName:
   imageTag:
   TARGET_PATH:
+  enableJobSecurityContext: true
+
+
 # Sleep after completing update, and before pod exits for auditing
 jobPostSleep:
 # ##### EXAMPLE VALUES SECTIONS
